# pygame-rgb-matrix

./: .env.example  .gitignore  .gitmodules  Dockerfile  README.md  config.env.example  dietpi.txt.example  docker-compose.yml  docker-entrypoint.sh  mypy.ini  pyproject.toml  requirements.txt  start-ft-server.sh  start.sh
etc/: rgbmatrix.env  rgbmatrix.service  xvfb.service
images/: city.ppm
rgbmatrix/sprites/: background.py  clock.py
rgbmatrix/sprites/utils/: images.py
rgbmatrix/utils/: hass.py
scripts/: deploy.sh  start.sh
src/: config.py  constants.py  integrations.py  main.py  sprites.py  theme.py  utils.py
src/app/: __main__.py  config.py
src/app/sprites/: background.py  base.py  clock.py  ticker.py
src/app/sprites/utils/: images.py
src/app/utils/: background.py  clock.py  flaschen.py  helpers.py  images.py  sprites.py  ticker.py
src/themes/farm/: __init__.py  sprites.py
src/themes/gradius/: __init__.py  sprites.py
src/utils/: background.py  camera.py  clock.py  hass.py  helpers.py  sprites.py  themes.py  ticker.py
src/utils/tiles/: tilemap.py  tileset.py
utils/: gphoto_auth.py  joypad.py
wideboy/: __init__.py  config.py
wideboy/sprites/: background.py  ticker.py
wideboy/utils/: display.py  hass.py  helpers.py  images.py  logger.py  pygame.py
wideboy/widgets/background/: __main__.py
wideboy/widgets/background/sprites/: background.py
wideboy/widgets/clock/: __main__.py
wideboy/widgets/fullexample/: __main__.py  utils.py
wideboy/widgets/ticker/: __main__.py
wideboy/widgets/tray/: __main__.py
(+6 files in other folders)
